# Oniun

./: .editorconfig  .gitignore  CMakeLists.txt  CleanProjectFiles.bat  GenerateProjectFiles.bat  LICENSE  README.md  premake5.lua
CMake/: Compiler.cmake
Editor/: CMakeLists.txt  OutputFile.txt  premake5.lua
Editor/Source/Core/: Application.cpp  Application.h
Editor/Source/GuiWindows/: Console.cpp  Console.h  ContentBrowser.cpp  ContentBrowser.h  DockingSpace.cpp  DockingSpace.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Viewport.cpp  Viewport.h
Editor/Source/Main/: Main.cpp  Tests.h
Engine/: CMakeLists.txt  premake5.lua
Engine/Source/: Oniun.pch.cpp  Oniun.pch.h
Engine/Source/Oniun/Core/: BaseTypes.h  ClassConstraints.h  ClassRestrictions.h  Color.cpp  Color.h  Compiler.h  Context.cpp  Context.h  DateTime.cpp  DateTime.h  DebugLogger.cpp  DebugLogger.h  Defines.cpp  Defines.h  Engine.cpp  Engine.h  EngineLayer.h  EntryPoint.h  Format.cpp  Format.h  GlobalVars.h  Hash.h  IThreadJob.h  Input.cpp  Input.h  KeyCode.h  LogContext.cpp  LogContext.h  Logger.cpp  Logger.h  UStringUtils.h  UUID.h
Engine/Source/Oniun/Core/Containers/: Array.h  HashMap.h
Engine/Source/Oniun/Core/Math/: Color.cpp  Color.h  Math.h  Matrix.cpp  Matrix.h  Matrix4.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Engine/Source/Oniun/Core/Memory/: Allocation.h  CRT.cpp  CRT.h  Crt.cpp  Crt.h  Memory.h
Engine/Source/Oniun/Core/String/: Format.cpp  Format.h  Formatter.cpp  Formatter.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  StringView.cpp  StringView.h
Engine/Source/Oniun/Core/Templates/: Array.h  Function.h  HashMap.h  LinkList.h  List.h  PackedIterator.h  Pair.h  Slice.h
Engine/Source/Oniun/Core/Time/: DateTime.cpp  DateTime.h  DeltaTime.cpp  DeltaTime.h
Engine/Source/Oniun/Core/Types/: DateTime.cpp  DateTime.h  PackedIterator.h  Pair.h  Slice.h  String.cpp  String.h
Engine/Source/Oniun/Event/: Event.cpp  Event.h  Gamepad.h  KeyboardEvents.h  WindowEvents.h
Engine/Source/Oniun/Platform/: EntryPoint.h  File.h  FileStream.h  FileSystem.h  Platform.h  Thread.h
Engine/Source/Oniun/Platform/Base/: IFile.h  IFileStream.h  IFileSystem.cpp  IFileSystem.h  IPlatform.h  IThread.cpp  IThread.h
Engine/Source/Oniun/Platform/Windows/: FileStream.h  Win32EntryPoint.h  Win32File.cpp  Win32File.h  Win32FileSystem.cpp  Win32FileSystem.h  Win32Headers.h  Win32Platform.cpp  Win32Platform.h  Win32Thread.cpp  Win32Thread.h
Engine/Source/Oniun/RHI/: Context.h  EditorGuiManger.h  FrameBuffer.h  IImGuiWindow.cpp  IImGuiWindow.h  ImGuiLayer.h  Shader.h  Texture.h  VertexBuffer.h
Engine/Source/Oniun/RHI/Base/: IContext.h  IEditorGuiManager.cpp  IEditorGuiManager.h  IImGuiLayer.cpp  IImGuiLayer.h  IImGuiWindowManager.cpp  IImGuiWindowManager.h  IShader.h  ITexture.h  IVertexBuffer.h
Engine/Source/Oniun/RHI/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLEditorGuiManager.cpp  OpenGLEditorGuiManager.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/Source/Oniun/Renderer/: GpuResource.h  IEditorGuiWindow.cpp  IEditorGuiWindow.h  IImGuiWindow.cpp  IImGuiWindow.h  Renderer.cpp  Renderer.h  RendererLayer.cpp  RendererLayer.h  Window.cpp  Window.h
Engine/Source/Oniun/Scene/: ComponentPool.cpp  ComponentPool.h  ComponentQuery.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  EntityEntry.h  Query.cpp  Query.h  Scene.cpp  Scene.h  SceneLayer.cpp  SceneLayer.h  SceneManager.h  World.h
Engine/Source/Oniun/Scene/Components/: Transform.h
Engine/Source/Oniun/Serialization/: TypeInfo.h
Resources/Editor/Layouts/: Default.ini
Resources/Engine/Shaders/: Phong.frag  Phong.vert
Scripts/: CleanProjectFiles.bat  GenerateWindowsProject.bat
