cmake_minimum_required(VERSION 3.16...3.31)

cmake_policy(SET CMP0003 NEW) # Libraries linked via full path != linker search path error
cmake_policy(SET CMP0010 NEW) # Syntax problems are errors

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_SUPPRESS_REGENERATION TRUE) # Removes uncessessary cmake files when generating MSVC project file
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE) #link time optimization

set(ONIUN_VERSION_MAJOR 0 CACHE INTERNAL "")
set(ONIUN_VERSION_MINOR 0 CACHE INTERNAL "")
set(ONIUN_VERSION_PATCH 1 CACHE INTERNAL "")
set(ONIUN_VERSION_STR "${ONIUN_VERSION_MAJOR}.${ONIUN_VERSION_MINOR}.${ONIUN_VERSION_PATCH}")

set(ONIUN_RESOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Resources" CACHE INTERNAL "")

set(BINARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Build/${CMAKE_BUILD_TYPE}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}/Archive")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}")

project(
    "Oniun Game Engine"
    VERSION ${ONIUN_VERSION_MAJOR}.${ONIUN_VERSION_MINOR}.${ONIUN_VERSION_PATCH}
    LANGUAGES CXX C
)

add_subdirectory(Thirdparty)
add_subdirectory(Engine)
add_subdirectory(Editor)

